--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
           </div>
         </div>
 
-  <div id="msg-content">
   <p id="message"></p>
+  <div class="wrap">
+  <section class="hidden">
+    <button id="sign-out">Sign Out</button>
+  </section>
 </div>
-<div id="auth-section">
+<div class="show">
       <section id="sec-sign-up">
         <h1>Sign Up</h1>
         <form id="sign-up">
@@ -46,9 +49,11 @@
           <button type="submit">sign In</button>
         </form>
       </section>
-
+</div>
+<div id="hid">
       <section class="hidden">
-        <h1>Change Password</h1>
+        <div id="ch-pw">
+        <h3>Change Password</h3>
         <form id="change-pw">
           <input placeholder="Old Password" type="password"
           name="passwords[old]" required>
@@ -56,27 +61,30 @@
           name="passwords[new]" required>
           <button type="submit">change Password</button>
         </form>
+      </div>
       </section>
 
-<section class="hidden" id="signout-content">
-    <h1>Sign Out</h1>
-  <button id="sign-out">Sign Out</button>
-</section>
-</div>
+
+
 <section class="hidden">
+<div class="center">
           <h3>Wel come To Tic-Tac-Toe Game</h3>
           <button id="games-create">start Game</button>
+        </div>
 </section>
+
 <section class="hidden">
   <h3>get game index</h3>
   <button id="games-index">show Game</button>
 </section>
+
 <section class="hidden-game">
 <div class="container">
   <div class="row">
-      <div class="col-6 letter-x">X</div>
-      <div class="col-6 letter-o">O</div>
+      <div class="col-6 letter-x ">X</div>
+      <div class="col-6 letter-o ">O</div>
   </div>
+
   <div class="row">
     <div class="col-4 box" data-cell-index='0'></div>
     <div class="col-4 box" data-cell-index='1'></div>
@@ -90,6 +98,7 @@
   </div>
 </div>
 </section>
+</div>
 </main>
     </body>
 </html>
