--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <button id="sign-out">Sign Out</button>
   </section>
 </div>
+<div class="set-page">
 <div class="column" id="show-signup">
       <section id="sec-sign-up">
         <h1>Sign Up</h1>
@@ -51,6 +52,7 @@
         </form>
       </section>
   </div>
+</div>
 
 <div id="hid">
       <section class="hidden">
@@ -84,12 +86,11 @@
 </section>
 
 <section class="hidden-game">
-<div class="container">
   <div class="row h-100" id="head-board">
       <div class="col-6 letter-x ">X</div>
       <div class="col-6 letter-o ">O</div>
   </div>
-
+<div class="container">
   <div class="row game-board">
     <div class="col-4 box" data-cell-index='0' ></div>
     <div class="col-4 box" data-cell-index='1' ></div>
