complete the minimum request of the project -fix the form to clear when the submit Failed. -Change the title of the game. -clear token after sign-out instead of refresh page.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>API Token Authentication</title>
+      <title>Tic-Tac-Toe Game application</title>
       <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 
   <p id="message"></p>
   <div class="wrap">
-  <section class="hidden-signout">
+  <section>
     <button id="sign-out">Sign Out</button>
   </section>
 </div>
