--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <button id="sign-out">Sign Out</button>
   </section>
 </div>
+  <div id="set-text"></div>
 <div class="set-page">
 <div class="column" id="show-signup">
       <section id="sec-sign-up">
@@ -54,7 +55,7 @@
       </section>
   </div>
 </div>
-
+<div class="hide-sign-out">
 <div id="hidden">
       <section>
         <div id="ch-pw">
@@ -82,6 +83,7 @@
   <div id="totalGame">
   </div>
 </section>
+</div>
 </div>
 
 <div id="hid">
