fix board click bug try to make the game board unable to click  if x/o There but I can't make it work.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       <div class="col-6 letter-x ">X<span id="x"> TURN!</span></div>
       <div class="col-6 letter-o ">O</div>
   </div>
+  <div id="hid-warning">
+  <p id="warning"></p>
+</div>
 <div class="container">
   <div class="row game-board">
     <div class="col-4 box" data-cell-index='0' ></div>
