--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
 </div>
 <div class="container">
   <div class="row game-board">
-    <div class="col-4 box" data-cell-index='0' ></div>
-    <div class="col-4 box" data-cell-index='1' ></div>
-    <div class="col-4 box" data-cell-index='2' ></div>
-    <div class="col-4 box" data-cell-index='3' ></div>
-    <div class="col-4 box" data-cell-index='4' ></div>
-    <div class="col-4 box" data-cell-index='5' ></div>
-    <div class="col-4 box" data-cell-index='6' ></div>
-    <div class="col-4 box" data-cell-index='7' ></div>
-    <div class="col-4 box" data-cell-index='8' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='0' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='1' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='2' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='3' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='4' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='5' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='6' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='7' ></div>
+    <div class="col-4 box" disabled="disabled" data-cell-index='8' ></div>
   </div>
 </div>
 </section>
