show the game cell array. I get my cells array from response api to the cells of the game that already over. my next step is to show that the game over, who win.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 </section>
 <section>
   <h3>Game History</h3>
-  <button id="games-index">Show Game History</button>
+  <div class="show-games">
+  <button id="games-show">Show Game History</button>
+  <ul></ul>
+  <button id="games-index">Show Game Static</button>
+</div>
   <div id="totalGame">
   </div>
 </section>
